--- a/index.html
+++ b/index.html
@@ -7,12 +7,54 @@
   </head>
 
   <body>
+    <nav id="navbar"></nav>
     <main id="main-doc">
-      <section class="main-section"></section>
-      <section class="main-section"></section>
-      <section class="main-section"></section>
-      <section class="main-section"></section>
-      <section class="main-section"></section>
+      <section id="topic_1"class="main-section">
+        <header>Topic 1</header>
+        <p></p>
+        <p></p>
+        <code></code>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+      <section id="topic_2"class="main-section">
+        <header>Topic 2</header>
+        <p></p>
+        <p></p>
+        <code></code>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+      <section id="topic_3"class="main-section">
+        <header>Topic 3</header>
+        <p></p>
+        <p></p>
+        <code></code>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+      <section id="topic_4"class="main-section">
+        <header>Topic 4</header>
+        <p></p>
+        <p></p>
+        <code></code>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+      <section id="topic_5"class="main-section">
+        <header>Topic 5</header>
+        <p></p>
+        <p></p>
+        <code></code>
+        <ul>
+          <li></li>
+        </ul>
+      </section>
+      
 
 
     </main>
